<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab1_101047</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday:</string>
    <string name="set">Set</string>
    <string name="hobbies">Hobbies:</string>
    <string name="add_hobbies">Add Hobbies</string>
    <string name="not_set">Not set</string>
    <string name="computer_games">Computer Games</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="anime">Anime</string>
    <string name="data">Data:</string>
    <string name="forward_slash">/</string>

</resources>